test/Harper/Tests/Good/Scoping_Block.har
main :: Integer;
main = {
  (n :: Integer) = 42;
  var (x :: Integer) = 0;

  { 
    (n :: Integer) = 1;
    x += n;
  }

  x += n;

  return x;
};