test/Harper/Tests/Bad/issue5_immutableAss.har
fun n = {
    x = n;
    x += 1;
    return x;
};

main = fun 42;